fix connection string

--- a/FatDB_SQL_Sample/App.config
+++ b/FatDB_SQL_Sample/App.config
@@ -4,7 +4,7 @@
   </configSections>
   <connectionStrings>
     <add name="FatDB_SQL_Sample.Properties.Settings.FatDB_SQL_SampleConnectionString"
-      connectionString="Data Source=JRWMBP\SQLEXPRESS;Initial Catalog=FatDB_SQL_Sample;Integrated Security=True"
+      connectionString="Data Source=108.168.251.27;Initial Catalog=FatDB_SQL_Sample;User ID=fatdbuser;Password=fatdb123;Integrated Security=False"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
