--- a/FatDB_SQL_Sample/Properties/Settings.settings
+++ b/FatDB_SQL_Sample/Properties/Settings.settings
@@ -1,14 +1,14 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FatAdventureWorks.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="FatDB_SQL_Sample.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="FatDB_SQL_SampleConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=JRWMBP\SQLEXPRESS;Initial Catalog=FatDB_SQL_Sample;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=108.168.251.27;Initial Catalog=FatDB_SQL_Sample;User ID=fatdbuser;Password=fatdb123;Integrated Security=False&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=JRWMBP\SQLEXPRESS;Initial Catalog=FatDB_SQL_Sample;Integrated Security=True</Value>
+      <Value Profile="(Default)">Data Source=108.168.251.27;Initial Catalog=FatDB_SQL_Sample;User ID=fatdbuser;Password=fatdb123;Integrated Security=False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
